Bug 241937 - Fix internal build break on iOS simulator after https://commits.webkit.org/251798@main
Summary: Fix internal build break on iOS simulator after https://commits.webkit.org/25...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Said Abou-Hallawa
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-23 15:04 PDT by Said Abou-Hallawa
Modified: 2022-06-23 15:53 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Said Abou-Hallawa 2022-06-23 15:04:37 PDT
SharedMemory::Handle::setOwnershipOfMemory() is calling ProcessIdentity::taskIdToken() which is defined only if HAVE(TASK_IDENTITY_TOKEN) is true

class ProcessIdentity {

#if HAVE(TASK_IDENTITY_TOKEN)
    task_id_token_t taskIdToken() const { return m_taskIdToken.sendRight(); }
#endif

};
Comment 1 Said Abou-Hallawa 2022-06-23 15:10:05 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1745
Comment 2 EWS 2022-06-23 15:52:21 PDT
Committed 251806@main (65fd594463ea): <https://commits.webkit.org/251806@main>

Reviewed commits have been landed. Closing PR #1745 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-06-23 15:53:13 PDT
<rdar://problem/95813375>