Fix internal build break on iOS simulator after https://commits.webkit.org/251798@main https://bugs.webkit.org/show_bug.cgi?id=241937

Reviewed by Ryan Haddad.

SharedMemory::Handle::setOwnershipOfMemory() calls ProcessIdentity::taskIdToken()
which is defined only if HAVE(TASK_IDENTITY_TOKEN) is true. Ensure the new code
compiles only if HAVE(TASK_IDENTITY_TOKEN) is true.

* Source/WebKit/Platform/cocoa/SharedMemoryCocoa.cpp:
(WebKit::SharedMemory::Handle::setOwnershipOfMemory const):

Canonical link: https://commits.webkit.org/251806@main